--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -9,8 +9,8 @@
 >
   <app-sidebar />
 
-  <div class="body-wrapper">
+  <div class="body-wrapper" style="padding-top: 5%;">
     <!-- <app-header-bar/> -->
-    <router-outlet />
+    <router-outlet  />
   </div>
 </div>
