--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -8,6 +8,7 @@
   data-sidebar-position="fixed"
   data-header-position="fixed"
 >
+<app-header-bar/>
   <!-- Sidebar Start -->
   <aside class="left-sidebar">
     <!-- Sidebar scroll-->
@@ -209,7 +210,9 @@
             </a>
           </li> -->
         </ul>
+       
       </nav>
+      
       <!-- End Sidebar navigation -->
     </div>
     <!-- End Sidebar scroll-->
