--- a/src/app/home-pages/about/about.component.html
+++ b/src/app/home-pages/about/about.component.html
@@ -6,7 +6,7 @@
         <h2>About Us - Stationery Plaza</h2>
         <div class="row">
             <div class="col-md-6">
-                <img src="https://via.placeholder.com/600x400" class="img-fluid" alt="Stationery Plaza">
+                <img src="assets/images/about.jpg" class="img-fluid" alt="Stationery Plaza">
             </div>
             <div class="col-md-6 about-content">
                 <p>Welcome to Stationery Plaza, your one-stop destination for all your stationery needs in Zimbabwe.
