--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -37,9 +37,9 @@
             <li class="nav-item" routerLinkActive="active">
               <a class="nav-link" routerLink="/contact">Contact Us</a>
             </li>
-            <li class="nav-item" routerLinkActive="active">
+            <!-- <li class="nav-item" routerLinkActive="active">
               <a class="nav-link" routerLink="/pricing">Pricing</a>
-            </li>
+            </li> -->
           </ul>
           <div class="d-flex">
             <a routerLink="/cart" class="btn btn-outline-dark me-2">
