--- a/src/app/home-pages/contact/contact.component.html
+++ b/src/app/home-pages/contact/contact.component.html
@@ -5,7 +5,7 @@
         <h2>Contact Us - Stationery Plaza</h2>
         <div class="row">
             <div class="col-md-6">
-                <img src="https://via.placeholder.com/600x400" class="img-fluid" alt="Contact Us">
+                <img src="assets/images/about.jpg" class="img-fluid" alt="Contact Us">
             </div>
             <div class="col-md-6">
                 <div class="contact-info">
