--- a/src/app/home-pages/home/home.component.html
+++ b/src/app/home-pages/home/home.component.html
@@ -1,7 +1,7 @@
 <app-header/>
 
 <!-- Start Main -->
-<main>
+<main style="padding-top: 15%;" class="pt-9">
   <!-- Carousel Added -->
   <div class="container mt-30 mb-5" >
     <div
