--- a/src/app/home-pages/home/home.component.html
+++ b/src/app/home-pages/home/home.component.html
@@ -120,9 +120,15 @@
           <div class="card overflow-hidden rounded-2">
             <div class="position-relative">
               <a >
-                <img
+                <!-- <img
                   *ngIf="product.category === 'PENS_PENCILS'"
                   src="assets/images/products/pens-pencils.jpg"
+                  class="category-image"
+                  alt="Pens and Pencils"
+                /> -->
+                <img
+                  *ngIf="product.name === 'elegant fountain pens' || product.category==='PENS_PENCILS'"
+                  src="assets/images/products/elegant_pen.jpg"
                   class="category-image"
                   alt="Pens and Pencils"
                 />
