--- a/src/app/home-pages/contact/contact.component.html
+++ b/src/app/home-pages/contact/contact.component.html
@@ -9,23 +9,19 @@
             </div>
             <div class="col-md-6">
                 <div class="contact-info">
-                    <img src="https://www.flaticon.com/svg/static/icons/svg/174/174848.svg" class="svg-icon"
-                        alt="Location">
+                    <i class="lni lni-pin"></i>
                     <span>123 Main Street, Harare, Zimbabwe</span>
                 </div>
                 <div class="contact-info">
-                    <img src="https://www.flaticon.com/svg/static/icons/svg/3075/3075974.svg" class="svg-icon"
-                        alt="Phone">
+                    <i class="lni lni-phone"></i>
                     <span>+263 123 456 789</span>
                 </div>
                 <div class="contact-info">
-                    <img src="https://www.flaticon.com/svg/static/icons/svg/3064/3064922.svg" class="svg-icon"
-                        alt="Email">
+                    <i class="lni lni-domain"></i>
                     <span>{{'info@stationeryplaza.com'}}</span>
                 </div>
                 <div class="contact-info">
-                    <img src="https://www.flaticon.com/svg/static/icons/svg/732/732200.svg" class="svg-icon"
-                        alt="Social Media">
+                    <i class="lni lni-facebook"></i>
                     <span>Follow us on <a href="#">Facebook</a>, <a href="#">Twitter</a>, and <a
                             href="#">Instagram</a></span>
                 </div>
